--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -46,12 +46,13 @@
     </nav>
     <main class="main-discover">
       <div class="images-discover">
-        <img loading="lazy" src="images/discover-img1.webp" alt="">
-        <img loading="lazy" src="images/discover-img2.webp" alt="">
-        <img loading="lazy" src="images/discover-img3.webp" alt="">
-        <img loading="lazy" src="images/discover-img4.webp" alt="">
-        <img loading="lazy" src="images/discover-img6.webp" alt="">
-        <img loading="lazy" src="images/discover-img5.webp" alt="">
+        <h3>Enjoy the Beautiful Sights of our City</h3>
+        <img loading="lazy" src="images/discover-img-1.webp" alt="">
+        <img loading="lazy" src="images/discover-img-2.webp" alt="">
+        <img loading="lazy" src="images/discover-img-3.webp" alt="">
+        <img loading="lazy" src="images/discover-img-4.webp" alt=""> 
+        <img loading="lazy" src="images/discover-img-6.webp" alt="">
+        <img loading="lazy" src="images/discover-img-5.webp" alt="">
         <!-- <img loading="lazy" src="#" alt=""> -->
       </div>
       <aside>
@@ -62,19 +63,26 @@
           <P class="visit"></P>
         </div>
         <div class="stats">
+          <h4>About Kubwa</h4>
           <p>
-            Kubwa is a residential district in Bwari, one of the local government areas in the Federal Capital Territory in Nigeria. It is one of the major suburbs within the metropolitan area of Abuja.[1]
-
-            The Kubwa Community has been in existence since 1990 and is considered to be the largest community in West Africa. The distance from Wuse Market to Kubwa is approximately 26 Kilometres. The Gbagi people were the original residents, but Kubwa community became an entirely new and heterogeneous community as a result of government policy on the relocation of the Gwagi people, having the three major ethnic groups Hausa, Yorubas, Igbos and other ethnic minorities as the main inhabitants of the community; they are mainly civil servants, businessmen and women, commercial motorcycle riders, artisans and entrepreneurs.[2][3][4][5]
+            Kubwa is a residential district in Bwari, one of the local government areas in the Federal Capital Territory in Nigeria. It is one of the major suburbs within the metropolitan area of Abuja.
+          </p>
+          <p>
+            The Kubwa Community has been in existence since 1990 and is considered to be the largest community in West Africa. The distance from Wuse Market to Kubwa is approximately 26 Kilometres. The Gbagi people were the original residents, but Kubwa community became an entirely new and heterogeneous community as a result of government policy on the relocation of the Gwagi people, having the three major ethnic groups Hausa, Yorubas, Igbos and other ethnic minorities as the main inhabitants of the community; they are mainly civil servants, businessmen and women, commercial motorcycle riders, artisans and entrepreneurs.
+          </p>
+          <h4>Sustainable Actions of Kubwa Community</h4>
+          <p>
+            Generally, the Kubwa community has grown and developed sustainably; however, it has been observed to be slow compared to other fast-growing cities in the world.[6] Residents attribute that their new diversity of ethnicity and professions coupled to their new infrastructure of roads, markets, and supermarkets has created a durable base for their new community as well (remarkably) as doing so at a relatively affordable cost. Specific drivers of financial sustainability are attributed to the various types of businesses ranging from operating supermarkets, shops, general markets (such as Kubwa Market, site 2-phase 1 Market, etc.) engaged by community members. Other drivers include the fact that above 60 percent of the residents are civil servants who work with the federal and capital territory government organizations/institutions. The remaining are entrepreneurs, private security agents, low-cost housing builders, truck pushers, commercial motorcycle riders and real estate practitioners. Also, the establishment of cooperative societies and huge investments by community members have had a huge influence on Kubwa financial sustainability. The community-friendly investment flexibilities of the cooperative societies are main reasons for huge financial investment by community members which include monthly and weekly cash deposits, higher interest on investment as compared to other financial institutions, etc.
           </p>
         </div>
       </div>
       <div class="events">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-          numquam amet omnis obcaecati quis praesentium? Vitae autem laborum
-          optio quae. Quos, voluptates nemo molestias mollitia quam sint
-          distinctio quod nam!
+        <h4>Events</h4>
+        <p></p>
+          For the most current happenings and up-to-date information on events, we invite you to visit our platform. Stay abreast of the latest developments, discover upcoming gatherings, and access insightful updates by exploring our comprehensive resource hub. Whether you're seeking the pulse of trending events or eager to stay informed about the latest updates, our platform is your go-to destination for all things events-related. Join us as we embark on a journey of discovery and engagement, ensuring you're always in the know about the dynamic world of events.
+        </p>
+        <p class="follow">
+          <a href="https://www.instagram.com/kubwa.updates/">Kubwa updates</a>
         </p>
       </aside>
     </main>
