--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,116 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Goodness Okafor" />
-    <meta
-      name="description"
-      content="This is the kubwa Chamber of Commerce Website"
-    />
-    <meta
-      property="og:title"
-      content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"
-    />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg"
-    />
-    <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/medium.css" />
-    <link rel="stylesheet" href="styles/larger.css" />
-    <link rel="icon" href="favicon.ico" />
-    <title>Kubwa Chamber of Commerce</title>
-  </head>
-  <body class="body-discover">
-    <header>
-      <img src="images/chamber-logo.webp" alt="logo" />
-      <a href="#" id="menu"></a>
 
-      <div class="toggle-container">
-        <label for="mytoggle" class="toggle">
-          <input type="checkbox" id="mytoggle" class="toggle-input" />
-          <span class="toggle-fill"></span>
-        </label>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Goodness Okafor" />
+  <meta name="description" content="This is the kubwa Chamber of Commerce Website" />
+  <meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image"
+    content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg" />
+  <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
+  <link rel="stylesheet" href="styles/normalize.css" />
+  <link rel="stylesheet" href="styles/base.css" />
+  <link rel="stylesheet" href="styles/medium.css" />
+  <link rel="stylesheet" href="styles/larger.css" />
+  <link rel="icon" href="favicon.ico" />
+  <title>Kubwa Chamber of Commerce</title>
+</head>
+
+<body class="body-discover">
+  <header>
+    <img src="images/chamber-logo.webp" alt="logo" />
+    <a href="#" id="menu"></a>
+
+    <div class="toggle-container">
+      <label for="mytoggle" class="toggle">
+        <input type="checkbox" id="mytoggle" class="toggle-input" />
+        <span class="toggle-fill"></span>
+      </label>
+    </div>
+  </header>
+  <nav>
+    <ul class="navigation">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Discover</a></li>
+      <li><a href="#">Contact Us</a></li>
+    </ul>
+  </nav>
+  <main class="main-discover">
+    <div class="images-discover">
+      <h3>Enjoy the Beautiful Sights of our City</h3>
+      <img loading="lazy" src="images/discover-img-1.webp" alt="">
+      <img loading="lazy" src="images/discover-img-2.webp" alt="">
+      <img loading="lazy" src="images/discover-img-3.webp" alt="">
+      <img loading="lazy" src="images/discover-img-4.webp" alt="">
+      <img loading="lazy" src="images/discover-img-6.webp" alt="">
+      <img loading="lazy" src="images/discover-img-5.webp" alt="">
+      <!-- <img loading="lazy" src="#" alt=""> -->
+    </div>
+    <aside>
+      <div class="info-card">
+        <p class="temperature"></p>
+        <p class="windchill"></p>
+        <p class="emoji"></p>
+        <P class="visit"></P>
       </div>
-    </header>
-    <nav>
-      <ul class="navigation">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Discover</a></li>
-        <li><a href="#">Contact Us</a></li>
-      </ul>
-    </nav>
-    <main class="main-discover">
-      <div class="images-discover">
-        <h3>Enjoy the Beautiful Sights of our City</h3>
-        <img loading="lazy" src="images/discover-img-1.webp" alt="">
-        <img loading="lazy" src="images/discover-img-2.webp" alt="">
-        <img loading="lazy" src="images/discover-img-3.webp" alt="">
-        <img loading="lazy" src="images/discover-img-4.webp" alt=""> 
-        <img loading="lazy" src="images/discover-img-6.webp" alt="">
-        <img loading="lazy" src="images/discover-img-5.webp" alt="">
-        <!-- <img loading="lazy" src="#" alt=""> -->
-      </div>
-      <aside>
-        <div class="info-card">
-          <p class="temperature"></p>
-          <p class="windchill"></p>
-          <p class="emoji"></p>
-          <P class="visit"></P>
-        </div>
-        <div class="stats">
-          <h4>About Kubwa</h4>
-          <p>
-            Kubwa is a residential district in Bwari, one of the local government areas in the Federal Capital Territory in Nigeria. It is one of the major suburbs within the metropolitan area of Abuja.
-          </p>
-          <p>
-            The Kubwa Community has been in existence since 1990 and is considered to be the largest community in West Africa. The distance from Wuse Market to Kubwa is approximately 26 Kilometres. The Gbagi people were the original residents, but Kubwa community became an entirely new and heterogeneous community as a result of government policy on the relocation of the Gwagi people, having the three major ethnic groups Hausa, Yorubas, Igbos and other ethnic minorities as the main inhabitants of the community; they are mainly civil servants, businessmen and women, commercial motorcycle riders, artisans and entrepreneurs.
-          </p>
-          <h4>Sustainable Actions of Kubwa Community</h4>
-          <p>
-            Generally, the Kubwa community has grown and developed sustainably; however, it has been observed to be slow compared to other fast-growing cities in the world.[6] Residents attribute that their new diversity of ethnicity and professions coupled to their new infrastructure of roads, markets, and supermarkets has created a durable base for their new community as well (remarkably) as doing so at a relatively affordable cost. Specific drivers of financial sustainability are attributed to the various types of businesses ranging from operating supermarkets, shops, general markets (such as Kubwa Market, site 2-phase 1 Market, etc.) engaged by community members. Other drivers include the fact that above 60 percent of the residents are civil servants who work with the federal and capital territory government organizations/institutions. The remaining are entrepreneurs, private security agents, low-cost housing builders, truck pushers, commercial motorcycle riders and real estate practitioners. Also, the establishment of cooperative societies and huge investments by community members have had a huge influence on Kubwa financial sustainability. The community-friendly investment flexibilities of the cooperative societies are main reasons for huge financial investment by community members which include monthly and weekly cash deposits, higher interest on investment as compared to other financial institutions, etc.
-          </p>
-        </div>
+      <div class="stats">
+        <h4>About Kubwa</h4>
+        <p>
+          Kubwa is a residential district in Bwari, one of the local government areas in the Federal Capital Territory
+          in Nigeria. It is one of the major suburbs within the metropolitan area of Abuja.
+        </p>
+        <p>
+          The Kubwa Community has been in existence since 1990 and is considered to be the largest community in West
+          Africa. The distance from Wuse Market to Kubwa is approximately 26 Kilometres. The Gbagi people were the
+          original residents, but Kubwa community became an entirely new and heterogeneous community as a result of
+          government policy on the relocation of the Gwagi people, having the three major ethnic groups Hausa, Yorubas,
+          Igbos and other ethnic minorities as the main inhabitants of the community; they are mainly civil servants,
+          businessmen and women, commercial motorcycle riders, artisans and entrepreneurs.
+        </p>
+        <h4>Sustainable Actions of Kubwa Community</h4>
+        <p>
+          Generally, the Kubwa community has grown and developed sustainably; however, it has been observed to be slow
+          compared to other fast-growing cities in the world.[6] Residents attribute that their new diversity of
+          ethnicity and professions coupled to their new infrastructure of roads, markets, and supermarkets has created
+          a durable base for their new community as well (remarkably) as doing so at a relatively affordable cost.
+          Specific drivers of financial sustainability are attributed to the various types of businesses ranging from
+          operating supermarkets, shops, general markets (such as Kubwa Market, site 2-phase 1 Market, etc.) engaged by
+          community members. Other drivers include the fact that above 60 percent of the residents are civil servants
+          who work with the federal and capital territory government organizations/institutions. The remaining are
+          entrepreneurs, private security agents, low-cost housing builders, truck pushers, commercial motorcycle riders
+          and real estate practitioners. Also, the establishment of cooperative societies and huge investments by
+          community members have had a huge influence on Kubwa financial sustainability. The community-friendly
+          investment flexibilities of the cooperative societies are main reasons for huge financial investment by
+          community members which include monthly and weekly cash deposits, higher interest on investment as compared to
+          other financial institutions, etc.
+        </p>
       </div>
       <div class="events">
         <h4>Events</h4>
-        <p></p>
-          For the most current happenings and up-to-date information on events, we invite you to visit our platform. Stay abreast of the latest developments, discover upcoming gatherings, and access insightful updates by exploring our comprehensive resource hub. Whether you're seeking the pulse of trending events or eager to stay informed about the latest updates, our platform is your go-to destination for all things events-related. Join us as we embark on a journey of discovery and engagement, ensuring you're always in the know about the dynamic world of events.
+        <p>
+          For the most current happenings and up-to-date information on events, we invite you to visit our platform.
+          Stay
+          abreast of the latest developments, discover upcoming gatherings, and access insightful updates by exploring
+          our
+          comprehensive resource hub. Whether you're seeking the pulse of trending events or eager to stay informed
+          about
+          the latest updates, our platform is your go-to destination for all things events-related. Join us as we embark
+          on a journey of discovery and engagement, ensuring you're always in the know about the dynamic world of
+          events.
         </p>
         <p class="follow">
           <a href="https://www.instagram.com/kubwa.updates/">Kubwa updates</a>
         </p>
-      </aside>
-    </main>
-    
-    <footer>
-      <p id="copyright"></p>
-      <p id="last-modified"></p>
-      <p>WDD-230 Project</p>
-      <div class="icons">
-        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d"
-          ><img src="images/facebook.png" alt="facebook icon"
-        /></a>
-        <a
-          href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
-          ><img src="images/instagram.png" alt="instagram icon"
-        /></a>
-        <a
-          href="https://www.linkedin.com/in/goodness-okafor-b2a993252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
-          ><img src="images/linkedin.png" alt="linked icon"
-        /></a>
-        <a href="https://twitter.com/eznira_"
-          ><img src="images/twitter.png" alt="twitter icon"
-        /></a>
       </div>
-    </footer>
-    <script src="../scripts/hambuger.js"></script>
-    <script src="../scripts/getdates.js"></script>
-    <script src="scripts/toggle.js"></script>
-    <script src="scripts/windchill.js"></script>
-  </body>
+    </aside>
+  </main>
+
+  <footer>
+    <p id="copyright"></p>
+    <p id="last-modified"></p>
+    <p>WDD-230 Project</p>
+    <div class="icons">
+      <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d"><img src="images/facebook.png"
+          alt="facebook icon" /></a>
+      <a href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"><img
+          src="images/instagram.png" alt="instagram icon" /></a>
+      <a
+        href="https://www.linkedin.com/in/goodness-okafor-b2a993252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><img
+          src="images/linkedin.png" alt="linked icon" /></a>
+      <a href="https://twitter.com/eznira_"><img src="images/twitter.png" alt="twitter icon" /></a>
+    </div>
+  </footer>
+  <script src="../scripts/hambuger.js"></script>
+  <script src="../scripts/getdates.js"></script>
+  <script src="scripts/toggle.js"></script>
+  <script src="scripts/windchill.js"></script>
+</body>
+
 </html>
