--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <li>
             <a href="lesson07/lazyloading.html">Lazy Loading</a>
           </li>
-          <li></li>
+          <li><a href="form.html">Forms</a></li>
           <li></li>
           <li></li>
         </ol>
