--- a/form.html
+++ b/form.html
@@ -38,13 +38,13 @@
         <input type="text" id="username" name="username" required>
 
         <label for="password">Password: </label>
-        <input type="password" id="password" name="password" pattern="[A-Za-z]{8,}">
+        <input type="password" id="password" name="password" pattern="[A-Za-z]{8,}" required>
 
         <label for="password2">Confirm Password: </label>
-        <input type="password" id="password2" name="password" pattern="[A-Za-z]{8,}">
+        <input type="password" id="password2" name="password" pattern="[A-Za-z]{8,}" required>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" title="A valid byui.edu email address">
+        <input type="email" id="email" name="email" title="A valid byui.edu email address" required>
 
         <label for="range" class="rangevalue">Range: </label>
         <input type="range" id="range" name="range" min="0" max="10" step="1" list="rangelist">
