--- a/form.html
+++ b/form.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Goodness Arinzechukwu Okafor" />
+  <meta name="description" content=" <head>
+    <meta charset=" UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Goodness Arinzechukwu Okafor" />
   <meta name="description" content="course assignment portal" />
   <meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development" />
   <meta property="og:type" content="website" />
@@ -15,11 +19,42 @@
   <link rel="stylesheet" href="styles/normalize.css" />
   <link rel="stylesheet" href="styles/base.css" />
   <link rel="stylesheet" href="styles/larger.css" />
-  <link rel="stylesheet" href="styles/form.css">
-
   <title>
-    Forms
+
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="author" content="Goodness Arinzechukwu Okafor" />
+      <meta name="description" content="course assignment portal" />
+      <meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development" />
+      <meta property="og:type" content="website" />
+      <meta property="og:image"
+        content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg" />
+      <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
+      <link rel="icon" href="favicon.ico" />
+      <link rel="stylesheet" href="styles/normalize.css" />
+      <link rel="stylesheet" href="styles/base.css" />
+      <link rel="stylesheet" href="styles/larger.css" />
+      <title>
+        Form Build
+      </title>
+    </head>
   </title>
+</head>" />
+<meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development" />
+<meta property="og:type" content="website" />
+<meta property="og:image"
+  content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg" />
+<meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
+<link rel="icon" href="favicon.ico" />
+<link rel="stylesheet" href="styles/normalize.css" />
+<link rel="stylesheet" href="styles/base.css" />
+<link rel="stylesheet" href="styles/larger.css" />
+<link rel="stylesheet" href="styles/form.css">
+
+<title>
+  Forms
+</title>
 </head>
 
 <body>
