--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,9 +33,9 @@
   </header>
   <nav>
     <ul class="navigation">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Discover</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="discover.html">Discover</a></li>
+      <li><a href="join.html">Contact Us</a></li>
     </ul>
   </nav>
   <main class="main-discover">
