--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,7 +41,7 @@
       <ul class="navigation">
         <li><a href="index.html">Home</a></li>
         <li><a href="discover.html">Discover</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="join.html">Contact Us</a></li>
       </ul>
     </nav>
     <main class="main">
