--- a/chamber/join.html
+++ b/chamber/join.html
@@ -35,7 +35,7 @@
     <ul class="navigation">
       <li><a href="index.html">Home</a></li>
       <li><a href="discover.html">Discover</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="join.html">Contact Us</a></li>
     </ul>
   </nav>
 
