--- a/chamber/join.html
+++ b/chamber/join.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Goodness Okafor" />
-  <meta name="description" content="This is the kubwa Chamber of Commerce Website" />
+  <meta name="description" content="This is the Join Us page from the kubwa chamber of Commerce" />
   <meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development" />
   <meta property="og:type" content="website" />
   <meta property="og:image"
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="styles/medium.css" />
   <link rel="stylesheet" href="styles/larger.css" />
   <link rel="icon" href="favicon.ico" />
-  <title>Kubwa Chamber of Commerce</title>
+  <title>Join Us</title>
 </head>
 
 <body>
