--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <a href="lesson07/lazyloading.html">Lazy Loading</a>
           </li>
           <li><a href="form.html">Forms</a></li>
-          <li></li>
+          <li><a href="lesson09/prophets.html"></a></li>
           <li></li>
         </ol>
       </section>
