--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </li>
           <li><a href="form.html">Forms</a></li>
           <li><a href="lesson09/prophets.html">Prophets</a></li>
-          <li></li>
+          <li><a href="scripts/links.js"></a></li>
         </ol>
       </section>
 
@@ -133,6 +133,7 @@
       <p id="copyright">Goodness Arinze Okafor, Abuja Nigeria</p>
       <p id="last-modified"></p>
     </footer>
+    <script src="scripts/links.js"></script>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hambuger.js"></script>
     <!-- <script src="chamber/scripts/windchill.js"></script> -->
