--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <section class="card">
         <h3>Learning Activities</h3>
         <ol class="activities">
-          <li>
+          <!-- <li>
             <a href="lesson01/holygrail.html">Holy Grail</a> |
             <a href="lesson01/media-query.html">Media Query</a>
           </li>
@@ -106,14 +106,13 @@
           </li>
           <li><a href="form.html">Forms</a></li>
           <li><a href="lesson09/prophets.html">Prophets</a></li>
-          <li><a href="scripts/links.js"></a></li>
+          <li><a href="scripts/links.js"></a></li> -->
         </ol>
       </section>
 
       <section class="card">
         <h3>Information</h3>
         <p class="visit"></p>
-        <p>SUNNY</p>
         <p class="temperature"></p>
         <p class="windchill"></p>
         <p class="emoji"></p>
@@ -136,6 +135,6 @@
     <script src="scripts/links.js"></script>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hambuger.js"></script>
-    <!-- <script src="chamber/scripts/windchill.js"></script> -->
+    <script src="chamber/scripts/windchill.js"></script>
   </body>
 </html>
