--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,12 +46,12 @@
       </ul>
     </nav>
     <main class="main-directory">
-        <div class="button">
+        <div class="buttons">
             <span class="grid-button">Grid</span>
             <span class="list-button">List</span>
         </div>
 
-        <div class="layout grid list"></div>
+        <div class="layout"></div>
     </main>
     <footer>
       <p id="copyright"></p>
