--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="styles/medium.css" />
     <link rel="stylesheet" href="styles/larger.css" />
     <link rel="icon" href="favicon.ico" />
-    <title>Kubwa Chamber of Commerce</title>
+    <title>'Directory of Members - Kubwa Chamber of Commerce'</title>
   </head>
   <body>
     <header>
