--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,83 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Goodness Okafor" />
-    <meta
-      name="description"
-      content="This is the kubwa Chamber of Commerce Website"
-    />
-    <meta
-      property="og:title"
-      content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development"
-    />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg"
-    />
-    <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/medium.css" />
-    <link rel="stylesheet" href="styles/larger.css" />
-    <link rel="icon" href="favicon.ico" />
-    <title>'Directory of Members - Kubwa Chamber of Commerce'</title>
-  </head>
-  <body>
-    <header>
-      <img src="images/chamber-logo.webp" alt="logo" />
-      <a href="#" id="menu"></a>
 
-      <div class="toggle-container">
-        <label for="mytoggle" class="toggle">
-          <input type="checkbox" id="mytoggle" class="toggle-input" />
-          <span class="toggle-fill"></span>
-        </label>
-      </div>
-    </header>
-    <nav>
-      <ul class="navigation">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="discover.html">Discover</a></li>
-        <li><a href="join.html">Contact Us</a></li>
-        <li><a href="directory.html">Directory</a></li>
-      </ul>
-    </nav>
-    <main class="main-directory">
-        <div class="buttons">
-            <span class="grid-button">Grid</span>
-            <span class="list-button">List</span>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Goodness Okafor" />
+  <meta name="description" content="This is the kubwa Chamber of Commerce Website" />
+  <meta property="og:title" content="Goodness Arinzechukwu Okafor - WDD 230 - Web Frontend Development" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image"
+    content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg" />
+  <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
+  <link rel="stylesheet" href="styles/normalize.css" />
+  <link rel="stylesheet" href="styles/base.css" />
+  <link rel="stylesheet" href="styles/medium.css" />
+  <link rel="stylesheet" href="styles/larger.css" />
+  <link rel="icon" href="favicon.ico" />
+  <title>'Directory of Members - Kubwa Chamber of Commerce'</title>
+</head>
 
-        <div class="layout"></div>
-    </main>
-    <footer>
-      <p id="copyright"></p>
-      <p id="last-modified"></p>
-      <p>WDD-230 Project</p>
-      <div class="icons">
-        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d"
-          ><img src="images/facebook.png" alt="facebook icon"
-        /></a>
-        <a
-          href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
-          ><img src="images/instagram.png" alt="instagram icon"
-        /></a>
-        <a
-          href="https://www.linkedin.com/in/goodness-okafor-b2a993252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
-          ><img src="images/linkedin.png" alt="linked icon"
-        /></a>
-        <a href="https://twitter.com/eznira_"
-          ><img src="images/twitter.png" alt="twitter icon"
-        /></a>
-      </div>
-    </footer>
-    <script src="scripts/company.js"></script>
-    <script src="../scripts/hambuger.js"></script>
-    <script src="../scripts/getdates.js"></script>
-    <script src="scripts/toggle.js"></script>
-    <script src="scripts/windchill.js"></script>
-  </body>
+<body>
+  <header>
+    <img src="images/chamber-logo.webp" alt="logo" />
+    <a href="#" id="menu"></a>
+
+    <div class="toggle-container">
+      <label for="mytoggle" class="toggle">
+        <input type="checkbox" id="mytoggle" class="toggle-input" />
+        <span class="toggle-fill"></span>
+      </label>
+    </div>
+  </header>
+  <nav>
+    <ul class="navigation">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="discover.html">Discover</a></li>
+      <li><a href="join.html">Contact Us</a></li>
+      <li><a href="directory.html">Directory</a></li>
+    </ul>
+  </nav>
+  <main class="main-directory">
+    <div class="buttons">
+      <span class="grid-button">Grid</span>
+      <span class="list-button">List</span>
+    </div>
+
+    <div class="layout"></div>
+
+
+  </main>
+  <footer>
+    <p id="copyright"></p>
+    <p id="last-modified"></p>
+    <p>WDD-230 Project</p>
+    <div class="icons">
+      <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d"><img src="images/facebook.png"
+          alt="facebook icon" /></a>
+      <a href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"><img
+          src="images/instagram.png" alt="instagram icon" /></a>
+      <a
+        href="https://www.linkedin.com/in/goodness-okafor-b2a993252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><img
+          src="images/linkedin.png" alt="linked icon" /></a>
+      <a href="https://twitter.com/eznira_"><img src="images/twitter.png" alt="twitter icon" /></a>
+    </div>
+  </footer>
+  <script src="/scripts/getdates.js"></script>
+  <script src="scripts/company.js"></script>
+  <script src="../scripts/hambuger.js"></script>
+  <script src="scripts/toggle.js"></script>
+  <script src="scripts/windchill.js"></script>
+</body>
+
 </html>
