--- a/index.html
+++ b/index.html
@@ -71,50 +71,15 @@
       <section class="card">
         <h3>Learning Activities</h3>
         <ol class="activities">
-          <!-- <li>
-            <a href="lesson01/holygrail.html">Holy Grail</a> |
-            <a href="lesson01/media-query.html">Media Query</a>
-          </li>
-          <li>
-            <a href="lesson02/design.html">Design</a> |
-            <a href="lesson02/design-principles.html">Design Principles</a>
-          </li>
-          <li>
-            <a href="lesson03/images/css-combinator-excersise.png"
-              >CSS Combinators</a
-            >
-            |
-            <a href="https://codepen.io/Goodness-Okafor/pen/poYwXMV"
-              >Codepen Activity</a
-            >
-            |
-            <a href="https://codepen.io/Goodness-Okafor/pen/YzgQmjV"
-              >Codepen Activity 2</a
-            >
-          </li>
-          <li>
-            <a href="https://codepen.io/Goodness-Okafor/pen/XWGzxEW"
-              >Code pen</a
-            >
-          </li>
-          <li><a href="lesson05/bom.html">DOM Manipulation</a></li>
-          <li>
-            <a href="lesson06/responsive-images.html">Responsive Images</a>
-          </li>
-          <li>
-            <a href="lesson07/lazyloading.html">Lazy Loading</a>
-          </li>
-          <li><a href="form.html">Forms</a></li>
-          <li><a href="lesson09/prophets.html">Prophets</a></li>
-          <li><a href="scripts/links.js"></a></li> -->
         </ol>
       </section>
 
       <section class="card">
         <h3>Information</h3>
         <p class="visit"></p>
+        <p class="city"></p>
         <p class="temperature"></p>
-        <p class="windchill"></p>
+        <p class="description"></p>
         <p class="emoji"></p>
       </section>
       <div class="iframe">
@@ -135,6 +100,7 @@
     <script src="scripts/links.js"></script>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hambuger.js"></script>
-    <script src="chamber/scripts/windchill.js"></script>
+    <!-- <script src="chamber/scripts/windchill.js"></script> -->
+    <script src="scripts/getweather.js"></script>
   </body>
 </html>
