--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,14 +41,14 @@
       <ul class="navigation">
         <li><a href="index.html">Home</a></li>
         <li><a href="discover.html">Discover</a></li>
-        <li><a href="join.html">Contact Us</a></li>
+        <li><a href="join.html">Join Us</a></li>
         <li><a href="directory.html">Directory</a></li>
       </ul>
     </nav>
     <main class="main">
       <div class="hero">
         <!-- <img src="images/wdd230-org-large.webp" alt="Hero Image" /> -->
-        <picture>
+        <!-- <picture>
           <source
             srcset="images/wdd230-org-small.jpg"
             media="(max-width: 500px)"
@@ -62,14 +62,14 @@
             media="(max-width: 1000px)"
           />
           <img src="images/wdd230-org-large.webp" alt="table setting" />
-        </picture>
+        </picture> -->
+        <img src="images/hero-img.webp" alt="hero-img">
         <div class="introduction">
           <h1>Kubwa Chamber of Commerce</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet et
-            rerum, pariatur ad quaerat repudiandae id ducimus molestias culpa.
+            Welcome to the Kubwa Chamber of Commerce website – your gateway to community support and business excellence.
           </p>
-          <button class="call-to-action">Join Us</button>
+          <button class="call-to-action"><a href="join.html">Join Us</a></button>
         </div>
       </div>
 
@@ -81,16 +81,10 @@
       <section class="current-event">
         <h3>current Events</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo,
-          eligendi. Praesentium nisi quibusdam mollitia ullam libero neque
-          similique unde deleniti numquam earum aliquam quam sed alias sequi
-          consequuntur, ipsum officiis!
+          In recent events in Kubwa, the local business community has rallied together to support initiatives aimed at promoting sustainable development and economic growth. From collaborative efforts to enhance infrastructure to innovative projects fostering entrepreneurship, Kubwa is witnessing a dynamic shift towards a more prosperous future. Additionally, community engagement programs and outreach initiatives have strengthened bonds among residents, fostering a sense of unity and shared purpose in driving progress forward.
         </p>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, ea.
-          Eligendi mollitia harum voluptatem sit unde odio adipisci maxime
-          reprehenderit fugiat aspernatur minus nostrum amet, quae molestias
-          ipsa eos quaerat.
+          Moreover, Kubwa has been actively involved in environmental conservation efforts, with various initiatives aimed at preserving the natural beauty of the region and promoting eco-friendly practices. Through tree planting campaigns, waste management projects, and educational workshops, residents and businesses alike are working hand in hand to create a greener and more sustainable environment for generations to come. These collective efforts underscore Kubwa's commitment to responsible stewardship of its resources and a dedication to building a brighter, more resilient community.
         </p>
       </section>
       <section class="card">
