--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
         <li><a href="chamber/index.html">Chamber</a></li>
         <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
+        <li><a href="final-project/index.html" target="_blank">BYU-Idaho</a></li>
         <li>
           <a
             href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng"
