--- a/final-project/index.html
+++ b/final-project/index.html
@@ -36,11 +36,11 @@
 
     <div class="display-1">
       <div class="table">
-        <img src="images/placeholder/table.png" alt="table" />
+        <img src="images/table.png" alt="table" />
         <p>Side Table</p>
       </div>
       <div class="chair">
-        <img src="images/placeholder/sofa.png" alt="sofa" />
+        <img src="images/sofa.png" alt="sofa" />
         <p>Sofa</p>
       </div>
     </div>
