--- a/final-project/index.html
+++ b/final-project/index.html
@@ -1,85 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/base.css" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <div class="contain-hero">
-      <header>
-        <h3>~SCOOTS~</h3>
-        <nav class="nav-menu">
-          <ul class="nav-bar">
-            <li><a class="nav-link" href="#">Home</a></li>
-            <li><a class="nav-link" href="rentals.html">Rentals</a></li>
-            <li><a class="nav-link" href="#">Reservations</a></li>
-            <li><a class="nav-link" href="#">Contact Us</a></li>
-          </ul>
-        </nav>
-        <div class="hambuger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-      </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles/base.css" />
+  <link rel="stylesheet" href="styles/medium.css" />
+  <link rel="stylesheet" href="styles/larger.css">
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="contain-hero">
+    <header>
+      <h3>~SCOOTS~</h3>
+      <nav class="nav-menu">
+        <ul class="nav-bar">
+          <li><a class="nav-link" href="#">Home</a></li>
+          <li><a class="nav-link" href="rentals.html">Rentals</a></li>
+          <li><a class="nav-link" href="#">Reservations</a></li>
+          <li><a class="nav-link" href="#">Contact Us</a></li>
+        </ul>
+      </nav>
+      <div class="hambuger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+    </header>
+    <div class="hero">
       <div class="welcome-img">
-        <img src="images/welcome-img.png" alt="" />
+        <img src="images/rental-7.webp" alt="" />
       </div>
       <div class="welcome">
         <h1>Welcome to ~Scoots~</h1>
         <a href="#">Reservations</a>
       </div>
     </div>
+  </div>
+  <div class="display-1">
+    <div class="table">
+      <img src="images/rental 11.png" alt="table" />
+      <h3>WILLIS SPORT</h3>
+      <p>SARGE GREEN </p>
+      <p>17-inch MOAB Black Aluminum Wheels</p>
+    </div>
+    <div class="chair">
+      <img src="images/rental-10.png" alt="sofa" />
+      <h3>SPORT S</h3>
+      <p>BLACK </p>
+      <p>Power Windows and Power Locks</p>
+    </div>
+    <div class="chair">
+      <img src="images/rental-12.png" alt="sofa" />
+      <h3>RUBICON</h3>
+      <p>BRIGHT WHITE</p>
+      <p>Off Road Plus Mode</p>
+    </div>
+  </div>
 
-    <div class="display-1">
-      <div class="table">
-        <img src="images/table.png" alt="table" />
-        <p>Side Table</p>
-      </div>
-      <div class="chair">
-        <img src="images/sofa.png" alt="sofa" />
-        <p>Sofa</p>
-      </div>
+  <div class="blog">
+    <div class="blog-1">
+      <img src="images/blog-1.jpeg" alt="blog-1" />
+      <p>
+        Learn How we integrate the latest tech to make your experience with us
+        wonderful!
+      </p>
+      <a href="#">Learn More</a>
     </div>
 
-    <div class="blog">
-      <div class="blog-1">
-        <img src="images/blog-1.jpeg" alt="blog-1" />
-        <p>
-          Learn How we integrate the latest tech to make your experience with us
-          wonderful!
-        </p>
-        <a href="#">Learn More</a>
-      </div>
-
-      <div class="blog-1">
-        <img src="images/blog-2.jpeg" alt="blog-2" />
-        <p>
-          Learn How we integrate the latest tech to make your experience with us
-          wonderful!
-        </p>
-        <a href="#">Learn More</a>
-      </div>
-
-      <div class="blog-1">
-        <img src="images/blog-3.jpeg" alt="blog-3" />
-        <p>
-          Learn How we integrate the latest tech to make your experience with us
-          wonderful!
-        </p>
-        <a href="#">Learn More</a>
-      </div>
+    <div class="blog-1">
+      <img src="images/blog-2.jpeg" alt="blog-2" />
+      <p>
+        Learn How we integrate the latest tech to make your experience with us
+        wonderful!
+      </p>
+      <a href="#">Learn More</a>
     </div>
 
+    <div class="blog-1">
+      <img src="images/blog-3.jpeg" alt="blog-3" />
+      <p>
+        Learn How we integrate the latest tech to make your experience with us
+        wonderful!
+      </p>
+      <a href="#">Learn More</a>
+    </div>
+  </div>
+
+  <div class="extra-info">
     <div class="shoutout">
       <h2>Our Instagram</h2>
       <p>Follow Us on Instagram to catch the latest updates</p>
       <a href="#">Follow Us</a>
     </div>
-
+  
     <div class="weather">
       <h3>Information</h3>
       <p class="visit"></p>
@@ -91,15 +106,18 @@
       <h4>Forecast</h4>
       <p class="days"></p>
     </div>
-    <footer>
-      <a href="Home">Home</a>
-      <a href="Home">Reservations</a>
-      <a href="Home">Contact Us</a>
-      <a href="Home">Rentals</a>
-      <p>© 2024 | Goodness Arinze Okafor</p>
-    </footer>
+  </div>
+  
+  <footer>
+    <a href="Home">Home</a>
+    <a href="Home">Reservations</a>
+    <a href="Home">Contact Us</a>
+    <a href="Home">Rentals</a>
+    <p>© 2024 | Goodness Arinze Okafor</p>
+  </footer>
 
-    <script src="scripts/hambuger.js"></script>
-    <script src="scripts/getweather.js"></script>
-  </body>
+  <script src="scripts/hambuger.js"></script>
+  <script src="scripts/getweather.js"></script>
+</body>
+
 </html>
