--- a/final-project/index.html
+++ b/final-project/index.html
@@ -30,7 +30,7 @@
     </header>
     <div class="hero">
       <div class="welcome-img">
-        <img src="images/rental-7.webp" alt="" />
+        <img src="images/rental-4.webp" alt="" />
       </div>
       <div class="welcome">
         <h1>Welcome to ~Scoots~</h1>
@@ -40,19 +40,19 @@
   </div>
   <div class="display-1">
     <div class="table">
-      <img src="images/rental 11.png" alt="table" />
+      <img src="images/display-1.png" alt="table" />
       <h3>WILLIS SPORT</h3>
       <p>SARGE GREEN </p>
       <p>17-inch MOAB Black Aluminum Wheels</p>
     </div>
     <div class="chair">
-      <img src="images/rental-10.png" alt="sofa" />
+      <img src="images/display-2.png" alt="sofa" />
       <h3>SPORT S</h3>
       <p>BLACK </p>
       <p>Power Windows and Power Locks</p>
     </div>
     <div class="chair">
-      <img src="images/rental-12.png" alt="sofa" />
+      <img src="images/display-3.png" alt="sofa" />
       <h3>RUBICON</h3>
       <p>BRIGHT WHITE</p>
       <p>Off Road Plus Mode</p>
