--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles/base.css" />
+  <link rel="stylesheet" href="styles/medium.css" />
+  <link rel="stylesheet" href="styles/larger.css">
   <title>Document</title>
 </head>
 
@@ -26,10 +28,65 @@
     </div>
   </header>
   <main>
-    <div class="rentals"></div>
+    <div class="rental-hero">
+      <img src="images/rental-hero.png" alt="">
+    </div>
+    <div class="rentals">
+      <div class="showcase">
+        <img src="images/rental-1.png" alt="">
+        <h4>Honda Metro Scooter</h4>
+        <p class="price"></p>
+      </div>
+      <div class="showcase">
+        <img src="images/rental-3.webp" alt="">
+        <h4>Honda Metro Scooter</h4>
+        <p class="price"></p>
+      </div>
+      <div class="showcase">
+        <img src="images/rental-3.png" class="scale" alt="">
+        <h4>Honda Metro Scooter</h4>
+        <p class="price"></p>
+      </div>
+      <div class="showcase">
+        <img src="images/rental-5.png" alt="">
+        <h4>Honda Metro Scooter</h4>
+        <p class="price"></p>
+      </div>
+      <div class="showcase">
+        <img src="images/rental-4.png" alt="">
+        <h4>Honda Metro Scooter</h4>
+        <p class="price"></p>
+      </div>
+      <div class="showcase">
+        <img src="images/rental-6.png" class="scale" alt="">
+        <h4>Honda Metro Scooter</h4>
+        <p class="price"></p>
+      </div>
+    </div>
+
+    <div class="prices">
+      <!-- <table>
+        <caption>PRICES</caption>
+        <tr>
+          <th></th>
+          <th></th>
+          <th class="reserve" colspan="2">Reservation</th>
+          <th class="Walk-In colspan="2">Walk-In</th>
+        </tr>
+        <tr>
+          <th class="type" >Rental Type</th>
+          <th class="persons" >Max. Persons</th>
+          <th class="reserve-full" >Half Day (hrs)</th>
+          <th class="reser" >Full Day</th>
+          <th class="" >Half Day (3 hrs)</th>
+          <th class="" >Full Day</th>
+        </tr>
+      </table> -->
+    </div>
   </main>
 
   <script src="scripts/hambuger.js"></script>
+  <script src="scripts/getrentals.js"></script>
 </body>
 
 </html>
