--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -65,23 +65,27 @@
     </div>
 
     <div class="prices">
-      <!-- <table>
+      <table>
         <caption>PRICES</caption>
-        <tr>
+        <!-- <tr>
           <th></th>
           <th></th>
           <th class="reserve" colspan="2">Reservation</th>
-          <th class="Walk-In colspan="2">Walk-In</th>
-        </tr>
+          <th class="Walk-In" colspan="2" >Walk-In</th>
+        </tr> -->
         <tr>
           <th class="type" >Rental Type</th>
           <th class="persons" >Max. Persons</th>
-          <th class="reserve-full" >Half Day (hrs)</th>
-          <th class="reser" >Full Day</th>
-          <th class="" >Half Day (3 hrs)</th>
-          <th class="" >Full Day</th>
+          <th class="reserve-half" >Half Day (hrs)</th>
+          <th class="reserve-full" >Full Day</th>
+          <th class="Walk-Inhalf" >Half Day (3 hrs)</th>
+          <th class="Walk-Infull" >Full Day</th>
         </tr>
-      </table> -->
+
+        <tbody class="tbody">
+
+        </tbody>
+      </table>
     </div>
   </main>
 
