--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -15,7 +15,7 @@
     <h3>~SCOOTS~</h3>
     <nav class="nav-menu">
       <ul class="nav-bar">
-        <li><a class="nav-link" href="#">Home</a></li>
+        <li><a class="nav-link" href="index.html">Home</a></li>
         <li><a class="nav-link" href="rentals.html">Rentals</a></li>
         <li><a class="nav-link" href="#">Reservations</a></li>
         <li><a class="nav-link" href="#">Contact Us</a></li>
