nav Hover state

--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -35,44 +35,49 @@
       <div class="showcase">
         <img src="images/rental-1.png" alt="">
         <h4>Honda Metro Scooter</h4>
-        <p class="price"></p>
+        <p class="priceful"></p>
+        <p class="pricehalf"></p>
       </div>
       <div class="showcase">
         <img src="images/rental-3.webp" alt="">
         <h4>Honda Metro Scooter</h4>
-        <p class="price"></p>
+        <p class="priceful"></p>
+        <p class="pricehalf"></p>
       </div>
       <div class="showcase">
         <img src="images/rental-3.png" class="scale" alt="">
         <h4>Honda Metro Scooter</h4>
-        <p class="price"></p>
+        <p class="priceful"></p>
+        <p class="pricehalf"></p>
       </div>
       <div class="showcase">
         <img src="images/rental-5.png" alt="">
         <h4>Honda Metro Scooter</h4>
-        <p class="price"></p>
+        <p class="priceful"></p>
+        <p class="pricehaalf"></p>
       </div>
       <div class="showcase">
         <img src="images/rental-4.png" alt="">
         <h4>Honda Metro Scooter</h4>
-        <p class="price"></p>
+        <p class="priceful"></p>
+        <p class="pricehalf"></p>
       </div>
       <div class="showcase">
         <img src="images/rental-6.png" class="scale" alt="">
         <h4>Honda Metro Scooter</h4>
-        <p class="price"></p>
+        <p class="pricehalf"></p>
       </div>
     </div>
 
     <div class="prices">
       <table>
         <caption>PRICES</caption>
-        <!-- <tr>
+        <tr>
           <th></th>
           <th></th>
           <th class="reserve" colspan="2">Reservation</th>
           <th class="Walk-In" colspan="2" >Walk-In</th>
-        </tr> -->
+        </tr>
         <tr>
           <th class="type" >Rental Type</th>
           <th class="persons" >Max. Persons</th>
