--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -76,15 +76,15 @@
           <th></th>
           <th></th>
           <th class="reserve" colspan="2">Reservation</th>
-          <th class="Walk-In" colspan="2" >Walk-In</th>
+          <th class="Walk-In" colspan="2">Walk-In</th>
         </tr>
         <tr>
-          <th class="type" >Rental Type</th>
-          <th class="persons" >Max. Persons</th>
-          <th class="reserve-half" >Half Day (hrs)</th>
-          <th class="reserve-full" >Full Day</th>
-          <th class="Walk-Inhalf" >Half Day (3 hrs)</th>
-          <th class="Walk-Infull" >Full Day</th>
+          <th class="type">Rental Type</th>
+          <th class="persons">Max. Persons</th>
+          <th class="reserve-half">Half Day (hrs)</th>
+          <th class="reserve-full">Full Day</th>
+          <th class="Walk-Inhalf">Half Day (3 hrs)</th>
+          <th class="Walk-Infull">Full Day</th>
         </tr>
 
         <tbody class="tbody">
@@ -94,6 +94,13 @@
     </div>
   </main>
 
+  <footer>
+    <a href="Home">Home</a>
+    <a href="Home">Reservations</a>
+    <a href="Home">Contact Us</a>
+    <a href="Home">Rentals</a>
+    <p>© 2024 | Goodness Arinze Okafor</p>
+  </footer>
   <script src="scripts/hambuger.js"></script>
   <script src="scripts/getrentals.js"></script>
 </body>
