--- a/final-project/index.html
+++ b/final-project/index.html
@@ -18,7 +18,7 @@
         <ul class="nav-bar">
           <li><a class="nav-link" href="index.html">Home</a></li>
           <li><a class="nav-link" href="rentals.html">Rentals</a></li>
-          <li><a class="nav-link" href="#">Reservations</a></li>
+          <li><a class="nav-link" href="reservation.html">Reservations</a></li>
           <li><a class="nav-link" href="#">Contact Us</a></li>
         </ul>
       </nav>
