--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -39,7 +39,7 @@
         <p class="pricehalf"></p>
       </div>
       <div class="showcase">
-        <img src="images/rental-3.webp" alt="">
+        <img src="images/rental-3s.png" alt="">
         <h4>Honda Metro Scooter</h4>
         <p class="priceful"></p>
         <p class="pricehalf"></p>
