--- a/final-project/reservation.html
+++ b/final-project/reservation.html
@@ -121,6 +121,9 @@
         <textarea name="drop-off" id="drop-off" cols="30" rows="10">
 
         </textarea>
+
+        <label for="submit"></label>
+        <input type="submit" id="submit">
       </form>
 
       <div class="drive-in"></div>
