--- a/final-project/index.html
+++ b/final-project/index.html
@@ -29,6 +29,10 @@
       </div>
     </header>
     <div class="hero">
+      <div class="popup">
+        <p class="popup-msg"></p>
+        <div class="cancel">ⓧ</div> <!-- weather popup-->
+      </div>
       <div class="welcome-img">
         <img src="images/rental-4.webp" alt="" />
       </div>
@@ -94,7 +98,7 @@
       <p>Follow Us on Instagram to catch the latest updates</p>
       <a href="#">Follow Us</a>
     </div>
-  
+
     <div class="weather">
       <h3>Information</h3>
       <p class="visit"></p>
@@ -107,7 +111,35 @@
       <p class="days"></p>
     </div>
   </div>
-  
+
+  <section class="rental-summary">
+    <h3>Rental Summary</h3>
+    <p>
+      Explore our diverse range of vehicles for your adventures:
+    </p>
+    <p>
+      Honda Motor Scooters:
+    </p>
+
+    <ul>
+      <li>Honda Metropolitan (49cc): Perfect for solo riders.</li>
+      <li>Honda Dio (110cc): Ideal for two-person journeys.</li>
+      <li>Honda PCX150 (149cc): Accommodates two riders comfortably.</li>
+    </ul>
+
+    <p>Side-by-Side ATVs:</p>
+    <ul>
+      <li>Honda Pioneer 1000: Seats up to four passengers for off-road fun.</li>
+    </ul>
+
+    <p>Jeeps:</p>
+    <ul>
+      <li>Jeep Wrangler (4-door manual with A/C): Seats five individuals comfortably.</li>
+      <li>eep Wrangler (2-door open-air manual): Designed for four-person adventures./li>
+    </ul>
+
+  </section>
+
   <footer>
     <a href="Home">Home</a>
     <a href="Home">Reservations</a>
