--- a/final-project/reservation.html
+++ b/final-project/reservation.html
@@ -93,6 +93,7 @@
 
         <label for="country">Country: </label>
         <select name="country" id="country" required>
+          <option value="select">Select Country</option>
         </select>
 
         <label for="state">State: </label>
@@ -141,6 +142,7 @@
 
   <script src="scripts/hambuger.js"></script>
   <script src="scripts/drivein.js"></script>
+  <script src="scripts/getcountries.js"></script>
 </body>
 
 </html>
