--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -18,7 +18,7 @@
         <li><a class="nav-link" href="index.html">Home</a></li>
         <li><a class="nav-link" href="rentals.html">Rentals</a></li>
         <li><a class="nav-link" href="reservation.html">Reservations</a></li>
-        <li><a class="nav-link" href="#">Contact Us</a></li>
+        <li><a class="nav-link" href="contactus.html">Contact Us</a></li>
       </ul>
     </nav>
     <div class="hambuger">
