submit-major changes

--- a/final-project/contactus.html
+++ b/final-project/contactus.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles/base.css" />
   <link rel="stylesheet" href="styles/medium.css" />
-  <link rel="stylesheet" href="styles/larger.css">  <title>Document</title>
+  <link rel="stylesheet" href="styles/larger.css">
+  <title>Document</title>
 </head>
 
 <body>
@@ -29,10 +30,10 @@
     </div>
   </header>
 
-  <div class="contact-hero">
+  <div class="herodiv">
 
     <h1>Contact Us</h1>
-    <img src="images/contact-us.png" alt="">
+    <!-- <img src="images/contact-us.png" alt=""> -->
   </div>
   <main class="contact-main">
     <p>We appreciate your interest in contacting us. Our team is here to assist you with any questions, feedback, or
@@ -70,10 +71,11 @@
     <p>Follow us on social media for updates about our products and services.</p>
     <!-- Begin Social Icons -->
     <ul class="social-media">
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+
     </ul>
 
     <h3>Feedback: </h3>
@@ -81,12 +83,12 @@
       We highly value your feedback as it helps us improve our products and services. Please feel free to share your
       comments, suggestions, or concerns with us via any of the contact channels mentioned above,
     </p>
+    <p>
+      Alternatively, you can fill out the contact form below, and one of our representatives will get back to you
+      promptly.
+    </p>
 
     <div class="contact-form">
-      <p>
-        Alternatively, you can fill out the contact form below, and one of our representatives will get back to you
-        promptly.
-      </p>
 
       <form action="get">
         <label for="firstname">First Name:</label>
@@ -101,15 +103,18 @@
         <label for="feedback">Name:</label>
         <textarea name="feedback" id="feedback" cols="30" rows="10"></textarea>
 
-        <input type="submit">
+        <input id="submit" type="submit">
       </form>
     </div>
-
-
-
   </main>
-
-
+  <footer>
+    <a href="Home">Home</a>
+    <a href="Home">Reservations</a>
+    <a href="Home">Contact Us</a>
+    <a href="Home">Rentals</a>
+    <p>© 2024 | Goodness Arinze Okafor</p>
+  </footer>
+  <script src="scripts/hambuger.js"></script>
 </body>
 
 </html>
