--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,10 +4,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/base.css" />
+  <meta name="author" content="Goodness Arinzechukwu Okafor" />
+  <meta name="description" content="course assignment portal" />
+  <meta property="og:title" content="~SCOOTS - Home" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image"
+    content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg" />
+  <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
+  <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="styles/medium.css" />
-  <link rel="stylesheet" href="styles/larger.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="styles/base.css" />
+  <link rel="stylesheet" href="styles/larger.css" />
+  <title>
+    ~SCOOTS - HOME
+  </title>
 </head>
 
 <body>
@@ -65,7 +75,7 @@
 
   <div class="blog">
     <div class="blog-1">
-      <img src="images/blog-1.jpeg" alt="blog-1" />
+      <img src="images/blog-1.jpg" alt="blog-1" />
       <p>
         Learn How we integrate the latest tech to make your experience with us
         wonderful!
@@ -74,7 +84,7 @@
     </div>
 
     <div class="blog-1">
-      <img src="images/blog-2.jpeg" alt="blog-2" />
+      <img src="images/blog-2.jpg" alt="blog-2" />
       <p>
         Learn How we integrate the latest tech to make your experience with us
         wonderful!
@@ -83,7 +93,7 @@
     </div>
 
     <div class="blog-1">
-      <img src="images/blog-3.jpeg" alt="blog-3" />
+      <img src="images/blog-3.jpg" alt="blog-3" />
       <p>
         Learn How we integrate the latest tech to make your experience with us
         wonderful!
