--- a/final-project/reservation.html
+++ b/final-project/reservation.html
@@ -92,7 +92,7 @@
         <input type="date" id="date" name="date" required>
 
         <label for="country">Country: </label>
-        <select name="country" id="country" required>
+        <select name="country" id="country">
           <option value="select">Select Country</option>
         </select>
 
