--- a/final-project/index.html
+++ b/final-project/index.html
@@ -12,8 +12,8 @@
     content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg" />
   <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
   <link rel="icon" href="favicon.ico" />
-  <link rel="stylesheet" href="styles/medium.css" />
   <link rel="stylesheet" href="styles/base.css" />
+  <link rel="stylesheet" href="styles/medium.css" />
   <link rel="stylesheet" href="styles/larger.css" />
   <title>
     ~SCOOTS - HOME
@@ -75,7 +75,7 @@
 
   <div class="blog">
     <div class="blog-1">
-      <img src="images/blog-1.jpg" alt="blog-1" />
+      <img src="images/rsz_1view-1.jpg" alt="blog-1" />
       <p>
         Learn How we integrate the latest tech to make your experience with us
         wonderful!
@@ -84,7 +84,7 @@
     </div>
 
     <div class="blog-1">
-      <img src="images/blog-2.jpg" alt="blog-2" />
+      <img src="images/rsz_1view-6.jpg" alt="blog-2" />
       <p>
         Learn How we integrate the latest tech to make your experience with us
         wonderful!
@@ -93,7 +93,7 @@
     </div>
 
     <div class="blog-1">
-      <img src="images/blog-3.jpg" alt="blog-3" />
+      <img src="images/rsz_view-5.jpg" alt="blog-3" />
       <p>
         Learn How we integrate the latest tech to make your experience with us
         wonderful!
