--- a/final-project/index.html
+++ b/final-project/index.html
@@ -38,7 +38,7 @@
         <span class="bar"></span>
       </div>
     </header>
-    <div class="hero">
+    <main class="hero">
       <div class="popup">
         <p class="popup-msg"></p>
         <div class="cancel">ⓧ</div> <!-- weather popup-->
@@ -50,7 +50,7 @@
         <h1>Welcome to ~Scoots~</h1>
         <a href="#">Reservations</a>
       </div>
-    </div>
+    </main>
   </div>
   <div class="display-1">
     <div class="table">
@@ -121,6 +121,7 @@
       <p class="days"></p>
     </div>
   </div>
+  
 
   <section class="rental-summary">
     <h3>Rental Summary</h3>
