--- a/final-project/contactus.html
+++ b/final-project/contactus.html
@@ -6,10 +6,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Goodness Arinzechukwu Okafor" />
+  <meta name="description" content="course assignment portal" />
+  <meta property="og:title" content="~SCOOTS - Home" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image"
+    content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg" />
+  <meta property="og:url" content="https://heavenlyaura.github.io/wdd230/" />
+  <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="styles/base.css" />
   <link rel="stylesheet" href="styles/medium.css" />
-  <link rel="stylesheet" href="styles/larger.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="styles/larger.css" />
+  <title>
+    ~SCOOTS - HOME
+  </title>
 </head>
 
 <body>
